# wayback-cache-proxy

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  README.md  config.example.yaml  docker-compose.yml
admin_service/: Dockerfile  pyproject.toml
admin_service/admin_service/: __init__.py  __main__.py  app.py  auth.py  config.py  redis_client.py
admin_service/admin_service/routes/: auth.py  cache.py  config.py  crawler.py  dashboard.py  warc.py
admin_service/admin_service/static/: style.css
admin_service/admin_service/templates/: base.html  cache.html  config.html  crawler.html  dashboard.html  login.html  warc.html  warc_diff.html
admin_service/admin_service/templates/partials/: crawler_live.html
docs/: ARCHITECTURE.md
proxy/: Dockerfile  pyproject.toml
proxy/error_pages/: 403.html  404.html  error.html
proxy/landing_page/: index.html
proxy/wayback_proxy/: __init__.py  __main__.py  admin.py  cache.py  config.py  crawler.py  server.py  throttle.py  warc_export.py
proxy/wayback_proxy/https/: __init__.py
proxy/wayback_proxy/snippets/: header_bar.html
proxy/wayback_proxy/wayback/: __init__.py  backend.py  client.py  pywb_client.py  transformer.py
